# task-management

./: .gitignore  Readme.md  setup.sh  shutdown.sh
backend/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go
backend/cmd/task-service/: Dockerfile  go.mod  go.sum  main.go
backend/cmd/task-service/configs/: configs.go
backend/cmd/task-service/core/dto/: req.go  (+1 more)
backend/cmd/task-service/pkg/: gorm.go
backend/cmd/task-service/server/: route.go  servers.go
backend/cmd/task-service/utils/: fiber.go
backend/cmd/user-service/: Dockerfile  go.mod  go.sum  main.go
backend/cmd/user-service/pkg/: error.go  gorm.go
backend/cmd/user-service/server/: route.go
backend/cmd/user-service/utils/: fiber.go
backend/configs/: config.go
backend/pkg/: gorm.go  logger.go
backend/servers/: middleware.go  server.go
db/: init.sql
frontend/: docker-compose.yaml
frontend/task-management/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/task-management/src/: App.vue  main.ts
frontend/task-management/src/assets/: main.css
frontend/task-management/src/components/: ApexChart.vue  HelloWorld.vue  Navbar.vue  TheWelcome.vue  UserItem.vue
frontend/task-management/src/http_request/: createHttpRequest.ts  index.ts
gateway/: Cargo.toml  Dockerfile  docker-compose.yaml
gateway/src/: app.rs  main.rs
gateway/src/configs/: cors.rs
gateway/src/handlers/: ping.rs  proxy.rs
gateway/src/routes/: mod.rs  project.rs  task.rs  user.rs
gateway/src/utils/: cors.rs  fallback.rs  mod.rs
(+30 files in other folders)
