[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.142"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
dotenvy = "0.15"
reqwest = { version = "0.12.22", features = ["json"] }
serde_yaml = "0.9.33"
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
http = "1.0"